--- a/src/Baasic.Client.Common/Baasic.Client.Common.csproj
+++ b/src/Baasic.Client.Common/Baasic.Client.Common.csproj
@@ -48,6 +48,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="Baasic.Client.Common.nuspec" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
