--- a/src/Baasic.Client/Baasic.Client.nuspec
+++ b/src/Baasic.Client/Baasic.Client.nuspec
@@ -15,6 +15,8 @@
     <dependencies>
       <dependency id="Baasic.Client.Common" version="[0.8.102,1.0.0)" />
       <dependency id="Baasic.Client.Model" version="[0.8.102,1.0.0)" />
+      <dependency id="Newtonsoft.Json" version="[6.0.8,7.0.0)" />
+      <dependency id="Microsoft.AspNet.WebApi.Client" version="[5.2.2,6.0.0)" />
     </dependencies>
   </metadata>
 </package>
