--- a/src/Baasic.Client.Common/Baasic.Client.Common.nuspec
+++ b/src/Baasic.Client.Common/Baasic.Client.Common.nuspec
@@ -13,6 +13,7 @@
     <language>en-US</language>
     <tags>Baasic, .NET, Portable, Clients, Common</tags>
     <dependencies>
+      <dependency id="Newtonsoft.Json" version="[6.0.8,7.0.0)" />
     </dependencies>
   </metadata>
 </package>
