--- a/src/Baasic.Client.Common/Baasic.Client.Common.nuspec
+++ b/src/Baasic.Client.Common/Baasic.Client.Common.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>$id$</id>
-    <version>$version$-alpha</version>
+    <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>Mono Ltd.</owners>
