--- a/src/Baasic.Client/Baasic.Client.nuspec
+++ b/src/Baasic.Client/Baasic.Client.nuspec
@@ -2,7 +2,7 @@
 <package xmlns="http://schemas.microsoft.com/packaging/2011/10/nuspec.xsd">
   <metadata>
     <id>$id$</id>
-    <version>$version$-alpha</version>
+    <version>$version$</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>Mono Ltd.</owners>
@@ -13,8 +13,8 @@
     <language>en-US</language>
     <tags>Baasic, .NET, Portable, Clients</tags>
     <dependencies>
-      <dependency id="Baasic.Client.Common" version="[0.8.102,1.0.0)" />
-      <dependency id="Baasic.Client.Model" version="[0.8.102,1.0.0)" />
+      <dependency id="Baasic.Client.Common" version="[0.8.136,1.0.0)" />
+      <dependency id="Baasic.Client.Model" version="[0.8.136,1.0.0)" />
       <dependency id="Newtonsoft.Json" version="[6.0.8,9.0.0)" />
       <dependency id="Microsoft.AspNet.WebApi.Client" version="[5.2.2,6.0.0)" />
     </dependencies>
