--- a/src/Baasic.Client.WebHost/Baasic.Client.WebHost.nuspec
+++ b/src/Baasic.Client.WebHost/Baasic.Client.WebHost.nuspec
@@ -14,6 +14,7 @@
     <tags>Baasic, .NET, Clients, WebHost</tags>
     <dependencies>
       <dependency id="Baasic.Client" version="[$version$,1.0.0)" />
+      <dependency id="Newtonsoft.Json" version="[6.0.8,9.0.0)" />
     </dependencies>
   </metadata>
 </package>
