--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,26 @@
-Baasic.Client/obj/
 *.suo
-src/Baasic.Client.Model/obj/
-src/Baasic.Client.Model/bin/
-src/Baasic.Client/obj/
-src/Baasic.Client/bin/
-packages/
-src/Baasic.Client.Tests/obj/
-src/Baasic.Client.Tests/bin/
-src/Baasic.Client.Common/bin/
-src/Baasic.Client.Common/obj/
-src/Baasic.Client.Ninject/bin/
-src/Baasic.Client.Ninject/obj/
+*.backup
+*.user
+*.dbmdl
+*.pptx
+*.psess
+*.orig
+*.xml
+*.~vsd
+*.zip
+*.sublime-project
+*.sublime-workspace
+*.exe
+*.avi
+*.mp4
+*.mov
+*.rar
 
+**/nuspec.list
+**/packages/
+**/bin
+**/obj
 
 ClearAssemblyCache.cmd
 PushNuGets.cmd
-src/Baasic.Client.WebHost/bin/
-src/Baasic.Client.WebHost/obj/
-*.orig
+*.log
